--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .friend{
+            color: brown;
+        }
+    </style>
 </head>
 <body>
     <h1>my second website</h1>
     <h3>Our National Flag</h3>
     <img src="flag.png" alt="">
+    <div>
+        <h1>Hatem Tai</h1>
+        <p>The name of that man was <b>Hatem Tai</b> The guest was praised the <span class="friend">dinner</span></p>
+    </div>
 </body>
 </html>
