--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div>
         <h1>Hatem Tai</h1>
         <p>The name of that man was <b>Hatem Tai</b> The guest was praised the <span class="friend">dinner</span></p>
+        <p>Going to picnic this month</p>
+        <p>That's why we are so excited</p>
     </div>
 </body>
 </html>
