--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p>The name of that man was <b>Hatem Tai</b> The guest was praised the <span class="friend">dinner</span></p>
         <p>Going to picnic this month</p>
         <p>That's why we are so excited</p>
+        <p>adding more task in picnic</p>
     </div>
 </body>
 </html>
