--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <p>Going to picnic this month</p>
         <p>That's why we are so excited</p>
         <p>adding more task in picnic</p>
+        <p>we had a lot of fun</p>
+        <p>many of our friend are coming</p>
     </div>
 </body>
 </html>
