--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
     <div>
         <h1>Hatem Tai</h1>
         <p>The name of that man was <b>Hatem Tai</b> The guest was praised the <span class="friend">dinner</span></p>
-        <p>Going to picnic this month</p>
-        <p>That's why we are so excited</p>
-        <p>adding more task in picnic</p>
-        <p>we had a lot of fun</p>
-        <p>many of our friend are coming</p>
+        <p>When it rains all the day, we call it a rainy day</p>
+        <p>In such a day, the sky remains cloudy</p>
+        <p>The day become dull and gloomy</p>
     </div>
 </body>
 </html>
